test/log/store/vsstcb7_v_i64.txt
vsstcb7_v_i64.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsstcb7_v_i64.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsstcb7_v_i64.c:37:76: error: expected declaration specifiers or '...' before ')' token
   37 | void vsstcb7_v_i64_golden(int64_t *base,int64_t *index,int64_t value[7][8],) {
      |                                                                            ^
vsstcb7_v_i64.c: In function 'main':
vsstcb7_v_i64.c:63:5: warning: implicit declaration of function 'vsstcb7_v_i64_golden'; did you mean 'vsstcb7_v_i64_m'? [-Wimplicit-function-declaration]
   63 |     vsstcb7_v_i64_golden(exp_base,exp_index,exp_value,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~
      |     vsstcb7_v_i64_m
vsstcb7_v_i64.c:63:55: error: 'exp_result' undeclared (first use in this function)
   63 |     vsstcb7_v_i64_golden(exp_base,exp_index,exp_value,exp_result);
      |                                                       ^~~~~~~~~~
vsstcb7_v_i64.c:63:55: note: each undeclared identifier is reported only once for each function it appears in
vsstcb7_v_i64.c:69:9: error: 'i' undeclared (first use in this function)
   69 |     for(i=0;i<ELE_NUM*COMBO_NUM;i++) {
      |         ^
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb7_v_i64.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsstcb7_v_i64"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsstcb7_v_i64.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb7_v_i64.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed